# LegnaCode-cli

./: .gitignore  CHANGELOG.md  CHANGELOG.zh-CN.md  COMPARISON-CODEX.md  COMPARISON.md  COMPARISON.zh-CN.md  README.md  README.zh-CN.md  bunfig.toml  developer.en.md  developer.md  package.json
.legna/.palace/: graph.json
.legna/memory/: MEMORY.md
native/: Cargo.toml  build.sh
native/apply-patch/: Cargo.toml
native/file-search/: Cargo.toml
native/file-search/src/: lib.rs
native/sandbox/: Cargo.toml
native/sandbox/src/: fallback.rs  lib.rs  linux.rs  macos.rs  windows.rs
scripts/: build-webui.ts  compile-all.ts  compile.ts  inline-webui.ts  publish.ts
sdk/python/: pyproject.toml
sdk/python/legnacode/: __init__.py  client.py  thread.py  transport.py  types.py
sdk/typescript/: package.json
src/: Tool.ts  commands.ts  external-modules.d.ts  main.tsx  query.ts  tools.ts
src/assistant/: gate.ts  index.ts  sessionDiscovery.ts
src/bootstrap/: state.ts
src/bridge/: peerSessions.ts  webhookSanitizer.ts
src/buddy/: companionObserver.ts
src/cli/: rollback.ts  up.ts
src/commands/: brief.ts  proactive.ts  undo.ts
src/components/: Spinner.tsx  StatusLine.tsx
src/constants/: betas.ts  querySource.ts  spinnerVerbs.ts  turnCompletionVerbs.ts
src/coordinator/: workerAgent.ts
src/daemon/: main.ts  workerRegistry.ts
src/entrypoints/: appServer.ts  cli.tsx
src/environment-runner/: main.ts
src/ink/: cursor.ts
src/keybindings/: types.ts
src/native/: index.ts  (+3 more)
webui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+282 files in other folders)
