[project]
name = "legnacode-sdk"
version = "1.0.0"
description = "Python SDK for LegnaCode — programmatic access to the LegnaCode CLI"
requires-python = ">=3.9"
license = {text = "MIT"}
keywords = ["legnacode", "codex", "ai", "coding", "sdk"]
dependencies = ["pydantic>=2.0"]

[project.optional-dependencies]
websocket = ["websockets>=12.0"]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["legnacode*"]
